<resources>
    <string name="app_name">PigGame</string>
    <string name="settings_name">Settings</string>

    <string name="handi_title">Player one gets a point advantage</string>
    <string name="handi_summary">Sets how many points player one starts with</string>

    <string name="score_title">Choose winning score</string>
    <string name="score_summary">Sets the winnning condition</string>

    <string name="save_title">Save games or start new on launching app</string>
    <string name="save_summary">On opening app: continue or reset the game?</string>

    <string name="double_down_title">Enables double or nothing option for each turn</string>
    <string name="double_down_summary">Check the box for double down mode</string>

    <string name="die_color_title">Change the color of the dice</string>
    <string name="die_color_summary">Check the box to use blue dice</string>

    <string name="confirm_double">Click here to double down</string>
    <string name="deny_double">Click here to keep your points</string>


    <string name="double_name">Double</string>

    <string name="die_size_title">Choose how many sides the dice will have</string>
    <string name="die_size_summary">Sets the number of sides on the dice</string>

    <string name="settings_title">Settings</string>
    <string name="menu_about">About</string>







</resources>
