<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/handi_title">
        <ListPreference
            android:key="handi_key"
            android:summary="@string/handi_summary"
            android:entries="@array/handicapping_labels"
            android:entryValues="@array/handicapping_values"
            android:defaultValue="0"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/score_title">
        <ListPreference
            android:key="score_key"
            android:summary="@string/score_summary"
            android:entries="@array/win_keys"
            android:entryValues="@array/win_values"
            android:defaultValue="100"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/die_size_title">
        <ListPreference
            android:key="die_size_key"
            android:summary="@string/die_size_summary"
            android:entries="@array/die_size_keys"
            android:entryValues="@array/die_size_values"
            android:defaultValue="6"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/die_size_title">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/save_title">
    </PreferenceCategory>




</PreferenceScreen>